[tool.poetry]
name = "musync"
version = "0.1.0"
description = ""
authors = ["klepp0"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
spotipy = "^2.23.0"
ipykernel = "^6.29.4"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
