[tool.poetry]
name = "musync"
version = "0.1.0"
description = "Sync your music between different streaming platforms"
authors = ["klepp0"]
readme = "README.md"
packages = [{ include = "musync" }]

[tool.poetry.dependencies]
python = "^3.10"
spotipy = "^2.23.0"
ipykernel = "^6.29.4"
python-dotenv = "^1.0.1"
tidalapi = "^0.7.6"
pytz = "^2024.1"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^5.0.0"
black = "^24.4.2"
isort = "^5.13.2"
pylint = "^3.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--cov=musync"]
